afp: Don't crash when opening the root directory

Previously, opening the root directory would generate an error and cause
the backend to abort:
    backend_dbus_handler org.gtk.vfs.Mount:OpenForRead
    Queued new job 0xba4350 (GVfsJobOpenForRead)

    ** (process:6778): CRITICAL **: g_vfs_afp_volume_open_fork_finish:
    assertion 'g_simple_async_result_is_valid (res, G_OBJECT (volume),
    g_vfs_afp_volume_open_fork)' failed

    (process:6778): GLib-CRITICAL **: g_error_copy: assertion 'error !=
    NULL' failed

Instead, remove the special-casing for the root directory since it is
handled correctly anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=720743